# flask_test_1

./: .breakpoints  .replit  app.py  hello.py  main.py  pyproject.toml  requirements.txt  stupid.db
static/css/: styles.css
templates/: base.html  index.html  main.html  page1.html  test.html  update.html
