[tool.poetry]
name = "repl_python3_flasktest"
version = "0.1.0"
description = ""
authors = ["BenjaminLi10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
replit = "^3.2.4"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
